tdf#127729 Don't include empty string presentations in search

description text

Change-Id: Ica123561e46b63368c73065595a91701814eafa0